# kde-fcstd-thumbnailer

./: CMakeLists.txt  README
src/: CMakeLists.txt  fcstdcreator.cpp  fcstdcreator.h  fcstdthumbnailer.desktop
